# sounder

./: .gitignore  README.md  pylintrc  pyproject.toml  test-file.txt  testOut
sounder/: __init__.py  app_logging.py  app_settings.py  menu_functions.py  progress.py  settings.yaml  sound_plot.py  sounder_app.py  std_io.py
test/: test_app_reader.py  test_app_writer.py  test_startup.py
