[tool.poetry]
name = "sounder"
version = "0.1.0"
description = "Sound analyser"
authors = ["mikecv <galacticwingcommander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sounder-go = "sounder.sounder_app:run"
