[tool.poetry]
name = "sounder"
version = "0.1.0"
description = "Sound analyser"
authors = ["mikecv <galacticwingcommander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"
poethepoet = "^0.16.2"

[tool.poe.tasks]
isort = "isort --profile google --sl -l 120 --check-only --diff sounder"
black = "black --line-length 120 --check --diff sounder"
lint = "pylint --rcfile=pylintrc -r y sounder"
mypy = "mypy sounder"
pytest = "pytest test --verbose -v"
utest = "pytest ."
type_checker = "mypy ."
test_all = ["isort", "black", "lint", "mypy", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sounder-go = "sounder.sounder_app:run"

